# champsimtrace_to_sbbt

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  champsimtrace_to_sbbt.cpp
include/champsim/: instruction.hpp  tracereader.hpp
src/: CMakeLists.txt
src/champsim/: tracereader.cpp
